--- a/css/style.css
+++ b/css/style.css
@@ -8207,8 +8207,8 @@ h1, h2, h3, h4, h5,
       font-size: 20px; }
 
 .hero-wrap {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
